# bglibs

./: %-cli.c.spac  %-cli.h.spac  %.1.spac  .gitignore  BIN  EXTRADIST  INCLUDE  INSTHIER  LIB  LIBVERSION  NEWS  README  README.in  TODO  VERSION  all.spac  bg-installer.c  bg-installer.cli  bg-installer=x  build-includes  choose.sh  cli-generate.1  cli-generate.pl  conf-cc  conf-home  conf-include  conf-ld  conf-lib  conf_inc.c.spac  conf_lib.c.spac  config.dxy  crc-gentab.c  crc-gentab=x  dns-responder.c  dotlibs.spac  endian.h2  hasflock.h2  haspeercred.h2  hassgprm.h1  hassgprm.h2  (+108 more)
ac/: dirent.h  time.h  wait.h
adt/: adt_sp.c  common.h  ghash.h  ghash_add.c  ghash_foreach.c  ghash_free.c  ghash_get.c  ghash_hash.c  ghash_hashb.c  ghash_hashs.c  ghash_init.c  ghash_insert.c  ghash_iter.c  ghash_rebuild.c  ghash_rehash.c  ghash_remove.c  ghash_search.c  ghash_set.c  ghash_test.c  gqueue.h  gqueue_pop.c  gqueue_push.c  gqueue_test.c  gqueue_top.c  gstack.h  gstack_pop.c  gstack_push.c  gstack_test.c  gstack_top.c  hashb.c  hashs.c  lib=l
base64/: asc2bin.c  base64.h  bin2asc.c  decode_line.c  decode_part.c  encode_line.c  encode_part.c  lib=l
cdb/: cdb.c  cdb.h  cdb=l  find.c  get.c  getnext.c  hash.c  lib=l  make.c  make.h  make=l  read.c  str.h  str=l
cdb++/: ChangeLog  Makefile.am  cdb++.h  cdb_get.cc  cdb_getrec.cc  cdb_make.cc  cdb_reader.cc  cdb_writer.cc  cdbtest.cc  datum.cc  datum.h  internal.h
cgi/: ChangeLog  (+5 more)
mystring/: ChangeLog  Makefile.am  append.cc  count.cc  find_first_of.cc  find_last_of.cc  iter.cc  iter.h  join.h  mystring.h  rep.h  trace.h
(+706 files in other folders)
