noinst_LIBRARIES = libmystring.a
EXTRA_DIST = ChangeLog

INCLUDES = -I..

libmystring_a_SOURCES = mystring.h trace.h \
	append.cc \
	assign.cc \
	find_first_ch.cc \
	find_first_of.cc \
	find_last_ch.cc \
	find_last_of.cc \
	iter.cc \
	join.cc \
	lower.cc \
	lstrip.cc \
	mystring.cc \
	rep.cc \
	rstrip.cc \
	sub.cc \
	subst.cc \
	strip.cc \
	upper.cc
# cons2.cc cons3.cc cons4.cc cons5.cc cons6.cc cons7.cc tmp.cc
